--- a/templates/Virtuous Finance.html
+++ b/templates/Virtuous Finance.html
@@ -6,7 +6,7 @@
     <title>Virtuous Finance</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='finance.css') }}"> <!-- Link to your CSS file -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="static/images/favicon-16x16.png">
+    <link rel="icon" href="static/images/Virtuous Technology.jpg">
   </head>
   
   
@@ -15,7 +15,7 @@
       <a class="title" href="/">Virtuous</a>
     </div>
 
-    <div>
+    <div class="container">
       <h1 class="h1">Under <span class="highlight glowing-text">Renovation</span></h1> 
     </div>
   </body>
