--- a/static/finance.css
+++ b/static/finance.css
@@ -26,6 +26,8 @@
     font-family: Modern Age;
     margin-top: 50px;
     text-align: center;
+    position: relative;
+    z-index: 2; /* Set a higher z-index for the header and makes sure that this element appears over the vh of the other div*/
     cursor: pointer;
     font-size: 40px;
     letter-spacing: 4px;
@@ -36,13 +38,23 @@
 .title a:visited {
     color: inherit;
   }
+
+  .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed; /* ensures that vh isnt affected by the div above it and begins at the top of the screen, not the bottom of the div above it*/
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+  }
     
   .h1{
     font-family: Modernism Narrow;
     letter-spacing: 5px;
     font-size: 50px;
-    text-align: center;
-    margin-top: 225px;
     color: whitesmoke;
   }
 
@@ -53,26 +65,3 @@
   .glowing-text {
     text-shadow: 0 0 5px rgba(255, 69, 0, 0.6);
   }
-
-      /* Media query for monitors */
-@media (min-width: 1800px){
-  .h1{
-    font-family: Modernism Narrow;
-    letter-spacing: 5px;
-    font-size: 50px;
-    text-align: center;
-    margin-top: 300px;
-    color: whitesmoke;
-  }
-}
-
-@media screen and (max-width: 950px) {
-  .h1{
-    font-family: Modernism Narrow;
-    letter-spacing: 5px;
-    font-size: 50px;
-    text-align: center;
-    margin-top: 310px;
-    color: whitesmoke;
-  }
-}
