--- a/templates/Coming Soon.html
+++ b/templates/Coming Soon.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="static/images/favicon-16x16.png">
   </head>
+  
   <body style="background-color: whitesmoke;">
     
     <div class="title">
@@ -14,7 +15,7 @@
     </div>
     
     <div class="body">
-        <h1 class="h1"> - <span class="highlight glowing-text">Automotive Design</span></h1>
+        <a class="subheadings-link h1"> - Automotive Design</a>
         <h2 class="h2">Virtuous is currently in the testing process of creating a system software that analyzes the imapct that computing has on break suspension, acceleration, and other mechanics of a car</h2>
       
       <div>
@@ -23,7 +24,7 @@
       </div>
      
       <div>
-        <a class="subheadings-link h1" href="/VirtuousFinance"> - Finance: <span class="highlight-finance glowing-text-finance">Quanrative Algorithim</span></a>
+        <a class="subheadings-link h1 " href="/VirtuousFinance"> - Finance: <span class="highlight-finance glowing-text-finance">Quanrative Algorithim</span></a>
         <h2 class="h2">Complete renovation will be coming to the Finance Sector, not only will our SMS Stock Notification be updated but the implementation of a quantative trading algorithim is in process</h2>
       </div>
     </div>  
