--- a/templates/Coming Soon.html
+++ b/templates/Coming Soon.html
@@ -5,10 +5,10 @@
     <title>Virtuous - Coming Soon</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='comingsoon.css') }}"> <!-- Link to your CSS file -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="static/images/favicon-16x16.png">
+    <link rel="icon" href="static/images/Virtuous Technology.jpg">
   </head>
   
-  <body style="background-color: whitesmoke;">
+  <body style="background-color: black;">
     
     <div class="title">
       <a class="title" href="/">Virtuous</a>
@@ -24,7 +24,7 @@
       </div>
      
       <div>
-        <a class="subheadings-link h1 " href="/VirtuousFinance"> - Finance: <span class="highlight-finance glowing-text-finance">Quanrative Algorithim</span></a>
+        <a class="subheadings-link h1 " href="/VirtuousFinance"> - Finance: <span class="highlight-finance glowing-text-finance">Quantative Algorithim</span></a>
         <h2 class="h2">Complete renovation will be coming to the Finance Sector, not only will our SMS Stock Notification be updated but the implementation of a quantative trading algorithim is in process</h2>
       </div>
     </div>  
