--- a/templates/Virtuous Finance.html
+++ b/templates/Virtuous Finance.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="container">
-      <h1 class="h1">Under <span class="highlight glowing-text">Renovation</span></h1> 
+      <h1 class="h1">Under Renovation</h1> 
     </div>
   </body>
 
