--- a/templates/Virtuous Education.html
+++ b/templates/Virtuous Education.html
@@ -6,43 +6,19 @@
     <title>Virtuous Education</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='education.css') }}"> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="static/images/favicon-16x16.png">
+     <link rel="icon" href="static/images/Virtuous Technology.jpg">
   </head>
 
-<!--
-  <body class="background">
-      <div class="title">
-        <a class="title" href="/">Virtuous</a>
-      </div>
-      
-      <div>
-        <h1 class="heading-center"> Education Sector</h1>
-      </div>
 
-      <div class="container">
-        <div>
-          <a href="/Python">Python</a>
-        </div>
-        <div>
-          <a href="/HTMLCSS">HTML-CSS</a>
-        </div>
-        <div>
-          <a href="/Applications">Applications</a>
-        </div>
-      </div>
-  </body>
---> 
-
-
-<body style="background-color: #212429;"></body>
+<body style="background-color: black;"></body>
   
 <div class="title">
     <a class="title" href="/">Virtuous</a>
   </div>
 
-  <div class="coming-soon glowing-text">
+  <div class="coming-soon">
     <h1>Under Renovation: New Update</h1>
-    <h2 >1-31-24<h2>
+    <h2 >2-31-24<h2>
   </div>
 
   </body>
