--- a/templates/Virtuous Education.html
+++ b/templates/Virtuous Education.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="coming-soon">
-    <h1>Under Renovation: New Update</h1>
+    <h1>New Update</h1>
     <h2 >2-31-24<h2>
   </div>
 
