--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
       <h1 class="education">Virtuous Education</h1>
       <h1 class="curriculum">curriculum focused</h1>
       <h1 class="description1">At the heart of innovation and technology lies education. 
-        <br>A focus on Artificial Intelligence and it’s rapid industrialization is at the core of our teaching.
+        <br>A focus on Artificial Intelligence and its rapid industrialization is at the core of our teaching.
         <br>Not only to understand the fundamentals of technology and engineering, but applying them to a multitude of fields.</h1>
       </div>
   </div>
