--- a/templates/Coming Soon.html
+++ b/templates/Coming Soon.html
@@ -24,7 +24,7 @@
       </div>
      
       <div>
-        <a class="subheadings-link h1 " href="/VirtuousFinance"> - Finance: <span class="highlight-finance glowing-text-finance">Quantative Algorithim</span></a>
+        <a class="subheadings-link h1 " href="/VirtuousFinance"> - Finance: <span class="highlight-finance glowing-text-finance">Quantative Algorithm</span></a>
         <h2 class="h2">Complete renovation will be coming to the Finance Sector, not only will our SMS Stock Notification be updated but the implementation of a quantative trading algorithim is in process</h2>
       </div>
     </div>  
