--- a/templates/Coming Soon.html
+++ b/templates/Coming Soon.html
@@ -16,7 +16,7 @@
     
     <div class="body">
         <a class="subheadings-link h1"> - Automotive Design</a>
-        <h2 class="h2">Virtuous is currently in the testing process of creating a system software that analyzes the imapct that computing has on break suspension, acceleration, and other mechanics of a car</h2>
+        <h2 class="h2">Virtuous is currently in the testing process of creating a system software that analyzes the impact that computing has on break suspension, acceleration, and other mechanics of a car</h2>
       
       <div>
         <a class="subheadings-link h1" href="/VirtuousEducation"> - Education: <span class="highlight-education glowing-text-education">Machine Learning</span></a>
