--- a/templates/Virtuous Education.html
+++ b/templates/Virtuous Education.html
@@ -10,17 +10,26 @@
   </head>
 
 
-<body style="background-color: black;"></body>
+<body>
+    <div class="section" id="section1">
+      <a id="education" href="/">Virtuous Education</a>
+      <h2>WHERE INNOVATION BEGINS</h2>
+    </div>
   
-<div class="title">
-    <a class="title" href="/">Virtuous</a>
-  </div>
-
-  <div class="coming-soon">
-    <h1>New Update</h1>
-    <h2 >2-29-24<h2>
-  </div>
-
+    <div class="section" id="section2">
+      <a href="/ComingSoon"><h1 id="python" class="hover-up">Python</h1></a>
+      <h2>BUILD YOUR BASE</h2>
+    </div>
+  
+    <div class="section" id="section3">
+      <a href="/ComingSoon"><h1 id="styling" class="hover-up">Styling</h1></a>
+      <h2>SOLIDIFY THE FOUNDATIONS</h2>
+    </div>
+  
+    <div class="section" id="section4">
+      <a href="/ComingSoon"><h1 id="deep" class="hover-up">Deep Learning</h1></a>
+      <h2>LEARN A NEW REALITY</h2>
+    </div>
   </body>
 
 </html>
