--- a/static/finance.css
+++ b/static/finance.css
@@ -58,4 +58,13 @@
     color: orangered;
   }
 
+  @media screen and (max-width: 600px) {
+    .title{
+      font-size: 20px;
+      margin-top: 20px;
+    }
 
+    .container{
+      text-align: center;
+    }
+  }
