image loading and animations

--- a/templates/Virtuous Education.html
+++ b/templates/Virtuous Education.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='education.css') }}"> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" href="static/images/Virtuous Technology.jpg">
+    
+      <!-- Preload Images -->
+    <link rel="preload" as="image" href="/static/images/education.jpg">
+    <link rel="preload" as="image" href="/static/images/python.jpg">
+    <link rel="preload" as="image" href="/static/images/styling.jpg">
+    <link rel="preload" as="image" href="/static/images/deep.jpg">
   </head>
 
 
@@ -17,7 +23,7 @@
     </div>
   
     <div class="section" id="section2">
-      <a href="/ComingSoon"><h1 id="python" class="hover-up">Python</h1></a>
+      <a href="/ComingSoon"><h1 id="python" class="hover-up" >Python</h1></a>
       <h2>BUILD YOUR BASE</h2>
     </div>
   
