--- a/static/education.css
+++ b/static/education.css
@@ -89,6 +89,23 @@
     line-height: 1px;
   }
 
+  h2{
+    animation: fadeAndSlide linear both;
+    animation-timeline: view();
+    animation-range: entry 10% cover 50%;
+   }
+  
+   @keyframes fadeAndSlide {
+    from {
+      opacity: 0;
+      transform: translateX(-100px); /* Initial position off to the left */
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0); /* Final position, centered */
+    }
+  }
+
   #education{
     font-size: 64px;
     text-decoration: none;
